syntax = "proto3";

option csharp_namespace = "MSChat.Shared.Contracts";

package chatapi;

// The chat service definition.
service ChatAPI {
  rpc GetChatMemberships (GetChatMembershipsRequest) returns (GetChatMembershipsResponse);
}

message GetChatMembershipsRequest {
  int64 chatId = 1;
}

message GetChatMembershipsResponse {
  bool isNull = 1;
  repeated ChatMembership memberships = 2;
}

message ChatMembership {
  string userId = 1;
  int64 chatId = 2;
  string chatName = 3;
  int64 lastReadMessageId = 4;
}
